@@ -1,4 +1,4 @@
 <h1 class="headerLine {$class}">
-	<span class="title">{htmlencode $title}</span>
+	<span class="title">{if $encode}{htmlencode $title}{else}{$title}{/if}</span>
 	<span class="rgt"><!--right--></span>
 </h1>
