@@ -1,6 +1,7 @@
 todoyu core changelog
 
 core 2.3.0 - not released yet
+	* Changed: Encoding of title in header-template is now optional
 	* Changed: Set default error - logging on error instead of debug
 	* Added: Accept exclamation mark in link parsing
 	* Added: Basic style for warning messages
